<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ejemploandroid.MainActivity$MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="42dp" />

    <RadioGroup
        android:id="@+id/rg_respuestas"
        android:layout_width="180dp"
        android:layout_height="301dp"
        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta2"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="120dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta3"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="198dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta4"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="248dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="176dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="92dp"
        android:layout_height="0dp"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="208dp"
        android:text="@string/btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>